# partner-scrape

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  justfile  pyproject.toml  requirements.txt  run_mirrors.py  scrapy.cfg
.clasi/: config.yaml  oop
config/: AGENTS.md  dotconfig.yaml
dev/: SCRAPER_GUIDELINES.md  build_demo.py  classify_sites.py  export_site.py  extract_events.py  fetch_tec_api.py  inventory_sitemaps.py  merge_events.py  sample_event_pages.py
partner_scrape/: __init__.py  cli.py  config.py  model.py  pipeline.py
scraper/: settings.py
site/: astro.config.mjs  package-lock.json  package.json
tests/: test_adapters_ats_filters.py  test_adapters_base.py  test_adapters_bibliocommons.py  test_adapters_generic_html.py  test_adapters_greenhouse.py  test_adapters_ical.py  test_adapters_leaguesync.py  test_adapters_lever.py  test_adapters_listing_html.py  test_adapters_localist.py  test_adapters_tec.py  test_adapters_wordpress.py  test_cli.py  test_config.py  test_discovery_candidate_pipeline.py  test_discovery_hub_scan.py  test_discovery_listing.py  test_discovery_sitemap.py  test_enrich_cache.py  test_enrich_enricher.py  test_enrich_llm_client.py  test_export.py  test_export_ads.py  test_export_images.py  test_extract_ladder.py  test_fetch_cache.py  test_fetch_headless.py  test_model.py  test_normalize_collapse.py  test_normalize_dedup.py  test_normalize_partners.py  test_normalize_run.py  test_normalize_taxonomy.py  test_observability_render.py  test_observability_snapshot.py  test_observability_yield_report.py  test_pipeline_e2e.py  (+8 more)
(+492 files in other folders)
